@@ -6,6 +6,7 @@ import java.io.BufferedReader;
 import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 
 /**
@@ -22,7 +23,7 @@ public class NetUtils
       {
         url += "?" + parameters;
       }
-      URL urlObj = new URL(url);
+      URL urlObj = URI.create(url).toURL();
       connection = (HttpURLConnection) urlObj.openConnection();
       connection.setRequestMethod("GET");
       connection.connect();
